# CanisPack

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: architecture.md
packaging/aur/canispack-git/: .SRCINFO  PKGBUILD
packaging/linux/: canispack.desktop
scripts/: build.sh  run-current-hub.sh  run.sh
src/: README.md  main.cpp
templates/basic/assets/defaults/postprocess/: default.postprocess
templates/basic/assets/shaders/: debug_collider.fs  debug_collider.vs  model3d.fs  model3d.vs  new_shader.fs
